# welo365

./: README.md  __init__.py  account.py  excel.py  o365_token.txt  pyproject.toml
tests/: test_welo365.py
welo365/: __init__.py  account.py  drive.py  excel.py  range.py  sharepoint.py
