[tool.poetry]
name = "welo365"
version = "2.0.2"
description = ""
authors = ["welocalize <aie-devel@welocalize.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "rypy"
# url = "https://pypi.rypy.tk/simple/"
# secondary = true
